--- a/trunk/res/layout/preferences.xml
+++ b/trunk/res/layout/preferences.xml
@@ -21,14 +21,14 @@
 -->
 
 <AbsoluteLayout
-android:id="@+id/widget0"
+android:id="@+id/dialog_preferences"
 android:layout_width="fill_parent"
 android:layout_height="fill_parent"
 xmlns:android="http://schemas.android.com/apk/res/android"
 >
 <Spinner
 android:id="@+id/spin_prov"
-android:layout_width="230px"
+android:layout_width="210px"
 android:layout_height="43px"
 android:layout_x="82px"
 android:layout_y="17px"
@@ -54,7 +54,7 @@ android:layout_y="84px"
 </TextView>
 <Spinner
 android:id="@+id/spin_city"
-android:layout_width="230px"
+android:layout_width="210px"
 android:layout_height="43px"
 android:layout_x="82px"
 android:layout_y="73px"
