EmWeather 0.9 Beta Release
Changes:

- Major GUI Overhaul: transparencies, background, re-designed icon layout, + many more
- Added extra forecast information
- Determine if there is a network connection or not
- Show progress bars on internet access
- published on Android Market!

TODO:

- French language support (Env. Canada provides french weather feeds)
- Better exception checking on URL fetches
- Add additional icon-sets
- Persistant forecast storage so you can read last retrieved forecast without data connection


Notes: Next release is not coming for awhile, barring any major bugs.  Enjoy this!

--- a/res/layout/preferences.xml
+++ b/res/layout/preferences.xml
@@ -21,14 +21,14 @@
 -->
 
 <AbsoluteLayout
-android:id="@+id/widget0"
+android:id="@+id/dialog_preferences"
 android:layout_width="fill_parent"
 android:layout_height="fill_parent"
 xmlns:android="http://schemas.android.com/apk/res/android"
 >
 <Spinner
 android:id="@+id/spin_prov"
-android:layout_width="230px"
+android:layout_width="210px"
 android:layout_height="43px"
 android:layout_x="82px"
 android:layout_y="17px"
@@ -54,7 +54,7 @@ android:layout_y="84px"
 </TextView>
 <Spinner
 android:id="@+id/spin_city"
-android:layout_width="230px"
+android:layout_width="210px"
 android:layout_height="43px"
 android:layout_x="82px"
 android:layout_y="73px"
